# scement

./: .gitmodules  .lintr  CMakeLists.txt  README.md  pyproject.toml
data/: README.md
data/meta/: covid_metadata.csv  covid_metadata.xlsx  gene_mapping.csv  patient_list.txt
eval/: README.md
eval/athaliana/: README.md  ath_combat.py  ath_copilot_run.py  ath_data_pp.py  ath_fastmnn.R  ath_scanorama.py  ath_seurat.R  patch_seuratdisk.R
eval/athaliana/athaliana_out/: README
eval/avalve/: README.md  avalve_combat.py  avalve_data_pp.py  avalve_fastmnn.R  avalve_plots.py  avalve_scanorama.py  avalve_scement.py  avalve_seurat.R
eval/covid_atlas/: convert_bpcells.R  convert_sceasy.R  cvd_10x_combat.py  cvd_combat.py  cvd_fastintegrate.R  cvd_fastmnn.R  cvd_scanorama.py  cvd_seuratv5_bpcells.R  prep_data.py  run_azimuth.R  select_data.py
eval/covid_atlas/combat_out/: README
eval/covid_atlas/scanorama_out/: README
eval/pbmc10x/: combat_intersect.json  combat_union.json  combo_fastmnn.R  combo_intersect.json  combo_intersect2.json  combo_intersect3.json  combo_intersect4.json  combo_intersect5.json  combo_intersect6.json  combo_intersect7.json  combo_union.json  combo_union2.json  combo_union3.json  combo_union4.json  combo_union5.json  combo_union6.json  combo_union7.json  data_prep_intersect.py  data_prep_union.py  fastintegration_wflow.R  pbmc10X_combat.py  pbmc_fastintegrate.R  scanorama_intersect.py  scanorama_union.py
eval/pbmc10x/json/: combat_intersect.json  combat_union.json  combo_intersect.json  combo_intersect2.json  combo_intersect3.json  combo_intersect4.json  combo_intersect5.json  combo_intersect6.json  combo_intersect7.json  combo_union.json  combo_union2.json  combo_union3.json  combo_union4.json  combo_union5.json  combo_union6.json  combo_union7.json
eval/utils/: scib_metrics.py  seurat2scanpy.py
include/scement/: coocsr.hpp  data_h5.hpp  data_if.hpp  data_py.hpp  impl_arma.hpp  impl_base.hpp  impl_eigen.hpp  py_types.hpp
src/: mod_scement.cpp
src/scement/: __init__.py  combat.py  cppix.py  dense.py  sparse.py
